--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://Yana-moon.github.io/goit-react-hw-03-image-finder/",
   "dependencies": {
+    "@iconify/icons-bi": "^1.2.16",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
